# eva-api

./: README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  pyproject.toml  requirements.txt
app/model/: task_model.py
app/route/: __init__.py  healthcheck.py  task_route.py
app/routes/: __init__.py  healthcheck.py  task_routes.py
app/service/: database.py  task_service.py
app/services/: database.py  supabase_service.py  task_service.py
route/: __init__.py
service/: task_service.py
